# LLM-embedding

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
embed-server/: constants.json  main.py  pyproject.toml
embed-server/embeddings/: embed.ipynb  merge.ipynb  query.ipynb  retrieve.ipynb
src/: constants.json
src/components/: Button.jsx  FeedCard.jsx  Header.jsx  Hero.jsx  HeroText.jsx  Loader.jsx  NavLinks.jsx  Reviews.jsx  VibeCombo.jsx
src/pages/: _app.jsx  index.jsx  login.jsx  register.jsx  template.jsx
src/styles/: tailwind.css
webapp/: package-lock.json  package.json
webapp/src/: constants.json
webapp/src/components/: FeedCard.jsx  Layout.jsx  Pricing.jsx  PrimaryFeatures.jsx
webapp/src/pages/: 404.jsx
