[tool.poetry]
name = "fomo-embed-server"
version = "0.1"
description = "LLM embedding server for FOMO backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
scikit-learn = "^1.3.0"
openai = "^0.27.8"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
